force-app/main/default/objects/heroku_logs__c/heroku_logs__c.object-meta.xml
<CustomObject>
    <label>heroku-logs</label>
    <nameField>
        <label>heroku-logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>heroku logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>