force-app/main/default/objects/heroku_logs__c/fields/creationdate__c.field-meta.xml
<CustomField>
    <fullName>creationdate__c</fullName>
    <label>creationdate</label>
    <type>DateTime</type>
</CustomField>