force-app/main/default/objects/heroku_logs__c/fields/externalid__c.field-meta.xml
<CustomField>
    <fullName>externalid__c</fullName>
    <externalId>true</externalId>
    <label>externalid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>